--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	    <!--          <li class="fork"><a href="https://github.com/dinyu">View On GitHub</a></li>-->
 	    <ul id="nav">
 	      <li><a href="/">Home</a></li>
-	      <li><a href="/archive">Older Entries</a></li>
+	      <li><a href="/archive" style="background: #456789">Older Entries</a></li>
 	      <li><a href="/contact">Contact</a></li>
 	    </ul>
 	  </nav>
